--- a/traefik/docker-compose.yml
+++ b/traefik/docker-compose.yml
@@ -22,6 +22,7 @@ services:
       - "--certificatesresolvers.cfdns.acme.email=${CF_API_EMAIL}"
       - "--certificatesresolvers.cfdns.acme.dnschallenge.provider=cloudflare"
       - "--certificatesresolvers.cfdns.acme.storage=/etc/traefik/acme.json"
+      # Datadog
     ports:
       - "80:80"
       - "443:443"
